precompiles/utils/macro/tests/precompile/compile-fail/test/generic-arg.stderr
error[E0412]: cannot find type `R` in this scope
  --> tests/precompile/compile-fail/test/generic-arg.rs:24:66
   |
24 |     fn foo(handle: &mut impl PrecompileHandle, arg: BoundedBytes<R>) -> EvmResult {
   |                                                                  ^ not found in this scope
   |
help: you might be missing a type parameter
   |
22 | impl<R: Get<u32>> Precompile<R><R> {
   |                             +++
